advance-k8s/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
spec:
  containers:
    - name: bad-container
      image: busybox
      securityContext:
        privileged: true
