advance-k8s/pod-security-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-privileges
spec:
  validationFailureAction: Enforce
  rules:
    - name: restrict-privilege-escalation
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Privileged pods are not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: "false"
